crates/web/tests/http/snapshots/http__legacy_admin__firehose_without_upgrade.snap
---
source: tests/http/legacy_admin.rs
expression: "get(\"/admin/firehose\").admin_key().send().await"
---
GET /admin/firehose
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Connection header did not include 'upgrade'
