crates/web/tests/http/snapshots/http__legacy_admin__leave_channels_without_key.snap
---
source: tests/http/legacy_admin.rs
expression: "request(Method::DELETE, \"/admin/channels\").json(CHANNELS).send().await"
---
DELETE /admin/channels
status: 403 Forbidden
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
No, I don't think so
